# rc-vs-sf

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: configs.py  make_figures.py  reproduce_paper.py  run.py
src/rcsf/: __init__.py  evaluation.py  filters.py  plotting.py  tuning.py
src/rcsf/methods/: __init__.py  base.py  edmd.py  esn.py  optimizers.py  sf.py  sfedmd.py
src/rcsf/systems/: __init__.py  base.py  double_pendulum.py  langevin.py  linear.py  lorenz.py  mackey_glass.py  narma.py
tests/: test_esn.py  test_fairness.py  test_filters.py  test_sf.py  test_sf_rls.py  test_systems.py
