[project]
name = "rcsf"
version = "0.1.0"
description = "Online-learning comparison: reservoir computing (ESN+RLS/LMS) vs spectral filtering (arXiv:2508.11990)"
readme = "README.md"
authors = [
    { name = "noboru-isobe", email = "nobo0409@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy<2",
    "parameterfree>=0.0.1",
    "pykoopman==1.2.1",
    "reservoirpy>=0.3.13,<0.4",
    "scipy>1.6.0,<=1.11.2",
    "setuptools<81",
    "torch>=2.1.2",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
